@@ -88,6 +88,11 @@ static const u_int16_t nv_340xx_pci_ids[] = {
 	0x10C0, 0x10C3, 0x10C5, 0x10D8,
 };
 
+/* PCI device_ids supported by the 367xx legacy driver */
+static const u_int16_t nv_367xx_pci_ids[] = {
+	0x0FEF, 0x0FF2, 0x118A, 0x11BF,
+};
+
 /* PCI device_ids supported by the current driver */
 static const u_int16_t nv_current_pci_ids[] = {
 	0x06C0, 0x06C4, 0x06CA, 0x06CD, 0x0DC0, 0x0DC4, 0x0DC5, 0x0DC6, 0x0DCD, 0x0DCE,
@@ -113,7 +118,7 @@ static const u_int16_t nv_current_pci_ids[] = {
 	0x11B6, 0x11B7, 0x11B8, 0x11BA, 0x11BC, 0x11BD, 0x11BE, 0x11FA, 0x11FC, 0x12B9,
 	0x12BA, 0x13BA, 0x13BB, 0x0DEF, 0x0DFC, 0x0FFD, 0x1056, 0x1057, 0x107C, 0x107D,
 	0x06D1, 0x06D2, 0x06DE, 0x06DF, 0x1021, 0x1022, 0x1023, 0x1024, 0x1026, 0x1027,
-	0x1028, 0x1029, 0x1091, 0x1094, 0x1096, 0x118F, 0x0FEF, 0x0FF2, 0x118A, 0x11BF,
+	0x1028, 0x1029, 0x1091, 0x1094, 0x1096, 0x118F,
 	0x0FEC, 0x1194, 0x11C5, 0x1288, 0x1295, 0x1393, 0x0FC9, 0x13D7, 0x13D8, 0x137A,
 	0x13B3, 0x13D9, 0x1401, 0x1289, 0x1299, 0x1346, 0x1347, 0x139A, 0x139B, 0x13BC,
 	0x17C2, 0x17F0, 0x102A, 0x11CB, 0x1344, 0x137D, 0x1398, 0x1617, 0x1618, 0x1619,
